force-app/main/default/objects/License__c/fields/Approach_of_Russian_Belorussian_sanction__c.field-meta.xml
<CustomField>
    <fullName>Approach_of_Russian_Belorussian_sanction__c</fullName>
    <label>Approach of Russian Belorussian sanction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>