force-app/main/default/objects/License__c/fields/Aprox_Number_of_current_customers__c.field-meta.xml
<CustomField>
    <fullName>Aprox_Number_of_current_customers__c</fullName>
    <label>Aprox. Number of current customers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>