force-app/main/default/objects/License__c/fields/Compliance_Call__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Call__c</fullName>
    <label>Compliance Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Applicable_NA_Other</valueSetName>
    </valueSet>
</CustomField>