force-app/main/default/objects/License__c/fields/Compliance_Department_organizational_str__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Department_organizational_str__c</fullName>
    <label>Compliance Department organizational str</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>