force-app/main/default/objects/License__c/fields/Compliance_Framework__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Framework__c</fullName>
    <label>Compliance Framework</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>