force-app/main/default/objects/License__c/fields/Corporate_KYC__c.field-meta.xml
<CustomField>
    <fullName>Corporate_KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate KYC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Corporate_KYC__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Corporate_KYC__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>