force-app/main/default/objects/License__c/fields/Examples_of_KYC_packs__c.field-meta.xml
<CustomField>
    <fullName>Examples_of_KYC_packs__c</fullName>
    <label>Examples of KYC packs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Applicable_NA_Other</valueSetName>
    </valueSet>
</CustomField>