force-app/main/default/objects/License__c/fields/Expected_Risk_Appetite_via_Noda__c.field-meta.xml
<CustomField>
    <fullName>Expected_Risk_Appetite_via_Noda__c</fullName>
    <label>Expected Risk Appetite via Noda</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>