force-app/main/default/objects/License__c/fields/Final_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>