force-app/main/default/objects/License__c/fields/Jurisdictions_of_Settlements__c.field-meta.xml
<CustomField>
    <fullName>Jurisdictions_of_Settlements__c</fullName>
    <label>Jurisdictions of Settlements</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>