force-app/main/default/objects/License__c/fields/Licence_Status__c.field-meta.xml
<CustomField>
    <fullName>Licence_Status__c</fullName>
    <label>Licence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>