force-app/main/default/objects/License__c/fields/Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type__c</fullName>
    <label>Licence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration with Authority</fullName>
            </value>
            <value>
                <fullName>Legal Opinion</fullName>
            </value>
            <value>
                <fullName>Virtual Assets Service Provider (VASP) License</fullName>
            </value>
            <value>
                <fullName>Remote Gambling License</fullName>
            </value>
            <value>
                <fullName>Forex Broker License</fullName>
            </value>
            <value>
                <fullName>Securities License</fullName>
            </value>
            <value>
                <fullName>Payment Institution (PI)</fullName>
            </value>
            <value>
                <fullName>Electronic Money Institution (EMI)</fullName>
            </value>
            <value>
                <fullName>Money Service Business (MSB)</fullName>
            </value>
            <value>
                <fullName>Financial Institution (FI)</fullName>
            </value>
            <value>
                <fullName>Agent License</fullName>
            </value>
            <value>
                <fullName>Travel License</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>