force-app/main/default/objects/License__c/fields/License_Permits__c.field-meta.xml
<CustomField>
    <fullName>License_Permits__c</fullName>
    <label>License &amp; Permits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Applicable_NA_Other</valueSetName>
    </valueSet>
</CustomField>