force-app/main/default/objects/License__c/fields/License_Permits_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Permits_Status__c</fullName>
    <label>License &amp; Permits Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Availiable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>