force-app/main/default/objects/License__c/fields/License_Verified__c.field-meta.xml
<CustomField>
    <fullName>License_Verified__c</fullName>
    <label>License Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>