force-app/main/default/objects/License__c/fields/Monitoring_porcess__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_porcess__c</fullName>
    <label>Monitoring porcess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>