force-app/main/default/objects/License__c/fields/Names_Positions_of_Participant_Noda__c.field-meta.xml
<CustomField>
    <fullName>Names_Positions_of_Participant_Noda__c</fullName>
    <label>Names/Positions of Participant Noda</label>
    <type>TextArea</type>
</CustomField>