force-app/main/default/objects/License__c/fields/Names_Positions_of_Participant_Partner__c.field-meta.xml
<CustomField>
    <fullName>Names_Positions_of_Participant_Partner__c</fullName>
    <label>Names/Positions of Participant Partner</label>
    <type>TextArea</type>
</CustomField>