force-app/main/default/objects/License__c/fields/Onboarding_process__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_process__c</fullName>
    <label>Onboarding process</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>