force-app/main/default/objects/License__c/fields/Planned_Number_of_customers_via_Noda__c.field-meta.xml
<CustomField>
    <fullName>Planned_Number_of_customers_via_Noda__c</fullName>
    <label>Planned Number of customers via Noda</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>