force-app/main/default/objects/License__c/fields/Policies_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Policies_Procedures__c</fullName>
    <label>Policies &amp; Procedures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Applicable_NA_Other</valueSetName>
    </valueSet>
</CustomField>