force-app/main/default/objects/License__c/fields/Regulatory_License_for_UK_EU_Other__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_License_for_UK_EU_Other__c</fullName>
    <label>Regulatory License (for UK,EU,Other)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>