force-app/main/default/objects/License__c/fields/Risk_Appetite__c.field-meta.xml
<CustomField>
    <fullName>Risk_Appetite__c</fullName>
    <label>Risk Appetite</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>