force-app/main/default/objects/License__c/fields/Third_party_vendors_used__c.field-meta.xml
<CustomField>
    <fullName>Third_party_vendors_used__c</fullName>
    <label>Third party vendors used</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>