force-app/main/default/objects/License__c/fields/Transaction_Monitoring_process__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Monitoring_process__c</fullName>
    <label>Transaction Monitoring process</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>